Actualización de la DB en la tabla departamentos, Fecha_Creacion: timestamp a Fecha_Creacion: localdate. Creación de Vista y DTOs para el proyecto.